# Popular-games-you-can-play

./: .gitignore  README.md  SOLUTION_SUMMARY.md  main_launch.bat  main_launch.sh
GitHubGamePlayer/: AUTOINSTALL_README.md  CMakeLists.txt  DOTNET_SUMMARY.md  GitHubGamePlayer  README.md  SUMMARY.md  launch.bat  launch.sh  launch_dotnet.bat  launch_dotnet.sh  launch_enhanced.bat  launch_enhanced.sh  test_games.sh
GitHubGamePlayer/dotnet/: GitHubGamePlayer.csproj  Program.cs  README.md
GitHubGamePlayer/games/2048/: index.html
GitHubGamePlayer/games/breakout/: breakout.py
GitHubGamePlayer/games/chess/: chess.py
GitHubGamePlayer/games/minesweeper/: minesweeper.cpp
GitHubGamePlayer/games/pacman/: pacman.js
GitHubGamePlayer/games/pong/: pong.py
GitHubGamePlayer/games/snake/: snake.py
GitHubGamePlayer/games/spaceinvaders/: spaceinvaders.py
GitHubGamePlayer/games/sudoku/: sudoku.js
GitHubGamePlayer/games/tetris/: tetris.js
GitHubGamePlayer/games/tictactoe/: tictactoe.py
GitHubGamePlayer/src/: chess.cpp  main.cpp  minesweeper.cpp  pacman.cpp  pong.cpp  snake.cpp  sudoku.cpp  tetris.cpp  twenty_forty_eight.cpp
game_server/GameServer/: Program.cs
game_server/GameServer/Properties/: launchSettings.json
game_server/GameServer/wwwroot/: index.html
game_server/GameServer/wwwroot/games/pong/: index.html
game_server/GameServer/wwwroot/games/snake/: index.html
game_server/GameServer/wwwroot/games/tic-tac-toe/: index.html
